--- a/DistFiles/xMatter/bloom-xmatter-common.less
+++ b/DistFiles/xMatter/bloom-xmatter-common.less
@@ -337,7 +337,7 @@
 
     @MarginBetweenBlocks_SmallPaper: .5em;
     &.A6Landscape, &.A6Portrait, &.QuarterLetterLandscape, &.QuarterLetterPortrait {
-        img {width: 65px};
+        .licenseImage {width: 65px};
 
         .copyright, .ISBNContainer, .licenseBlock, .originalAcknowledgments .bloom-contentNational1{
             margin-bottom: @MarginBetweenBlocks_SmallPaper;
